# buggy-tasks

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
buggy_af/: __init__.py  __main__.py  app.py  io.py
buggy_tasks/: __init__.py  __main__.py  app.py  commands.py  derive_tags.py  io.py  priority.py
buggy_tasks/commands/: __init__.py  registry.py  translate.py
data/: reference.json  train-data.json
tests/: test_prio.py
