[tool.poetry]
name = "buggy-tasks"
version = "0.1.0"
description = "A simple TODO list app built using Streamlit"
authors = ["Patrick Deutschmann <patrick.deutschmann@me.com>"]
readme = "README.md"
packages = [{ include = "buggy_tasks" }]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.32.0"
googletrans = "4.0.2"
mistralai = "1.7.0"
dotenv = "^0.9.9"
scikit-learn = "^1.6.1"
joblib = "^1.5.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
start = "streamlit run buggy_tasks/app.py"
train-model = "python -c 'from buggy_tasks.priority import train_priority_model; train_priority_model()'"
train-model-reference = "python -c 'from buggy_tasks.priority import train_priority_model; train_priority_model(\"data/reference.json\")'"
